# AviSynth-DPID

./: CHANGELOG.md  CMakeLists.txt  README.md
msvc/: DPID.sln  DPID.vcxproj  DPID.vcxproj.filters
src/: DPID.cpp  DPID.rc
